2012-05-03
* rework bruteforce.py so it is easier to make different frontends

2012-05-02
* add very simplistic verifier for MP4 files to reduce false positives
further. Only works on a subset of files for now
* add first version of a graphical viewer of results made with BAT
* add stubs for extra method for scanning dynamically linked binaries, by
searching for function names. Prepare rest of the code for the change.

2012-04-24
* tagging 7.0

2012-04-18
* set a maximum size for picture generation: if file is bigger than a certain
size no picture ("tv static") will be generated.
* outcomment code for generating thumbnails for now
* set a maximum size for hexdump generation: if file is bigger than a certain
size no hexdump will be generated.

2012-04-17
* replace glob.glob() with our own filtering. This prevents os.listdir() from
being called numerous times
* very simplistic check for tagging Ogg files, needs vorbis-tools.

2012-03-29
* add a very simplistic method to tag binary XML for Android (file name check,
plus the first four bytes)

2012-03-26
* add tool to check whether or not a binary + libraries can be combined at
runtime
* replace piechart generation using external script and pychart with
matplotlib. It's faster, doesn't require an external script and better fits
the license.

2012-03-24
* remove unused and no longer maintained file

2012-03-21
* pass size hints, if available

2012-03-19
* also pass top level scan directory to postrunscans

2012-03-18
* add code to determineinformation about correlation between packages for
non-unique matches.

2012-03-11
* move the unpacking to a directory called 'data'. Dump the state of the
program in a pickle so it can be read back for later use.
* remove hardcoded paths from the data that is pickled. This makes it easier
to relocate the results for future processing.

2012-03-08
* add script that uses hexdump -Cv to generate files to be used in a GUI. It's
faster than writing our own.

2012-03-01